added card extract

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ JSON_568c43bed8ca390830d6eb31.zip
 settlement
 pymongo_getting_started__m101p_5255846be2d4231cc608403c.py
 hello_bottle__m101p_54ffa9bcd8ca390acc94ceef.py
+card extracts
