--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ pymongo_getting_started__m101p_5255846be2d4231cc608403c.py
 hello_bottle__m101p_54ffa9bcd8ca390acc94ceef.py
 card extracts
 card_extract
+exercises
+cardprod
